--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,12 +2,12 @@
   background-image: url("../img/bg.jpg");
   /* background-size: cover; */
   background-attachment: scroll;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   padding-top: 40px;
   margin: 0em;
   width: 100%;
   height: auto;
-  background-size: 100% 100%;
+  /* background-size: cover; */
 }
 
 .jumbotron {
