--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -55,7 +55,16 @@
                             <td>{{ title }}</td>
                             <td>{{ overview }}</td>
                             <td>{{ release_date }}</td>
-                            <td><i id={{ _id }} class="fas fa-trash-alt float-right text-danger"></i></td>
+                            <td>
+                                <i id={{ _id }} class="fas fa-trash-alt float-right text-danger"></i>
+                                {{#if note}}
+                                    <i data-id={{ _id }} class="fas fa-file-alt text-success addnote"></i>
+                                {{else}}
+                                    <i data-id={{ _id }} class="fas fa-file text-muted addnote"></i>
+                                {{/if}}
+
+
+                            </td>
                         </tr>
                         {{/each}}
                     </tbody>
@@ -63,4 +72,30 @@
             </div>
         </div>
     </div>
+</div>
+
+  <!-- The Modal -->
+  <div class="modal" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+      
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Add a note to this movie</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        
+        <!-- Modal body -->
+        <div id="notes" class="modal-body">
+        </div>
+        
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+  
 </div>
