updated note and search formatting

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,13 +21,9 @@
             <div class="card-body">
                 <form class="search-form">
                     <div class="form-group">
-                        <label for="movieSearch">Movie Search:</label>
-                        <input type="text" id="movie-search" name="name">
+                        <input type="text" id="movie-search" name="name" placeholder='Enter movie to search for...'>
+                        <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
                     </div>
-            </div>
-
-            <div class="card-footer">
-                <button class="btn btn-primary" type="submit">Search Movie</button>
             </div>
             </form>
 
